--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
 sonar.projectKey=iamneo-production_d40a30b2-f2de-4635-98a8-99afb1019c19
 sonar.organization=iamneo-production
+sonar.projectVersion=1.0
